vlib/v/checker/tests/mod_op_wrong_right_type_err_d.v
fn main() {
	a := map[string]int
	1 % a
}
